# dso

./: CMakeLists.txt
config/: iphone6s.txt  mynteye_default_left.txt  mynteye_default_right.txt  mynteye_distort_left.txt  mynteye_distort_right.txt  mynteye_left.txt  mynteye_norect.txt  mynteye_okvis_left.txt  mynteye_okvis_right.txt  mynteye_orbslam2_fps60.txt  mynteye_right.txt  mynteye_vins_fps25.txt  mynteye_viorb_fps25.txt  realsense.txt
src/: main_breakdown_initializer.cpp  main_dso_pangolin.cpp  main_iphone6s_images.cpp  main_mynteye.cpp  main_mynteye_async.cpp  main_mynteye_async_recorder.cpp  main_mynteye_dataset.cpp  main_mynteye_dataset_nogui.cpp  main_mynteye_recorder.cpp  main_mynteye_test.cpp  main_realtime_r200.cpp  main_sse_test.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  PixelSelector.h  PixelSelector2.cpp  Residuals.cpp  Residuals.h
src/IOWrapper/: ImageDisplay.h  Output3DWrapper.h
src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp  ImageRW_OpenCV.cpp
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  PangolinDSOViewer.cpp
src/Initialization/: Initializer.cpp  Initializer.h  iCommon.cpp  iCommon.h  iEpipolarSolver.cpp  iEpipolarSolver.h  iFeatureExtractor.cpp  iFeatureExtractor.h  iFeatureMatcher.h  iFrame.cpp  iFrame.h  iRichFeatureMatcher.cpp  iRichFeatureMatcher.h
src/OptimizationBackend/: AccumulatedSCHessian.cpp  AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  MatrixAccumulators.h  RawResidualJacobian.h
src/calibration/: geometric_calibration.cpp  geometric_calibration.h  photometric_calibration.cpp  photometric_calibration.h
src/monovo/: system.cpp  system.h
src/util/: DatasetReader.h  ImageAndExposure.h  MinimalImage.h  Undistort.cpp  Undistort.h  globalCalib.cpp  globalCalib.h  globalFuncs.h  nanoflann.h  settings.cpp  settings.h
src/utility/: cmd_args_parser.h  images_reader.h
